--- a/locale/zh_TW/LC_MESSAGES/messages.po
+++ b/locale/zh_TW/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-10-30 12:29+0000\n"
-"PO-Revision-Date: 2014-09-30 06:55+0000\n"
+"PO-Revision-Date: 2014-11-20 14:08+0000\n"
 "Last-Translator: Peter <petercpg@mail.moztw.org>\n"
 "Language-Team: MozTW <petercpg@mail.moztw.org>\n"
 "Language: zh_TW\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1412060140.0\n"
+"X-POOTLE-MTIME: 1416492483.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 msgid "Payment cancelled."
@@ -369,13 +369,11 @@ msgstr ""
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68
 #: public/js/views/force-auth.js:90
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "正在連線至 Persona"
+msgstr "正在連線至 Firefox Accounts"
 
 #: templates/reset-start.html:8
-#, fuzzy
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Firefox "
 "Accounts to reset your PIN."
-msgstr "您確定要重設 PIN 碼嗎？必須登入至 Persona 才能重設您的 PIN 碼。"
+msgstr "您確定要重設 PIN 碼嗎？必須以 Firefox 帳號登入才能重設您的 PIN 碼。"
