Commit from Mozilla Verbatim by user tonnes.mb@gmail.com.: 77 of 77 strings translated (0 fuzzy).

--- a/locale/nl/LC_MESSAGES/messages.po
+++ b/locale/nl/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-28 17:19+0000\n"
-"PO-Revision-Date: 2014-10-31 11:45+0000\n"
+"PO-Revision-Date: 2014-12-06 03:39+0000\n"
 "Last-Translator: Ton <tonnes.mb@gmail.com>\n"
 "Language-Team: none\n"
 "Language: nl\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1414755958.0\n"
+"X-POOTLE-MTIME: 1417837169.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 #: public/js/lib/cancel.js:18
@@ -418,12 +418,12 @@ msgstr ""
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "Afmelden"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr "U bent aangemeld als:"
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr "Bent u dit niet?"
