--- a/locale/hu/LC_MESSAGES/messages.po
+++ b/locale/hu/LC_MESSAGES/messages.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-28 17:19+0000\n"
-"PO-Revision-Date: 2014-09-30 09:21+0000\n"
+"PO-Revision-Date: 2014-12-13 09:19+0000\n"
 "Last-Translator: Gábor <kelemeng@ubuntu.com>\n"
 "Language-Team: Hungarian <kde-l10n-hu@kde.org>\n"
 "Language: hu\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n !=1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1412068919.0\n"
+"X-POOTLE-MTIME: 1418462341.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 #: public/js/lib/cancel.js:18
@@ -408,27 +408,25 @@ msgstr ""
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68
 #: public/js/views/force-auth.js:90 public/js/views/reset-start.js:70
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "Kapcsolódás a Personahoz"
+msgstr "Kapcsolódás a Firefox fiókokhoz"
 
 #: templates/reset-start.html:8
-#, fuzzy
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Firefox "
 "Accounts to reset your PIN."
 msgstr ""
-"Valóban vissza kívánja állítani a PIN kódját? Ehhez be kell lépni a "
-"Personába."
+"Valóban vissza kívánja állítani a PIN kódját? Ehhez be kell lépni a Firefox "
+"fiókokba."
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "Kijelentkezés"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr "Bejelentkezett mint:"
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr "Nem Ön az?"
