--- a/locale/zh_CN/LC_MESSAGES/messages.po
+++ b/locale/zh_CN/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Webpay\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-28 17:19+0000\n"
-"PO-Revision-Date: 2014-10-01 23:39+0000\n"
+"PO-Revision-Date: 2014-12-16 04:28+0000\n"
 "Last-Translator: yfdyh000 <yfdyh000@gmail.com>\n"
 "Language-Team: Chinese Simplified, China <LL@li.org>\n"
 "Language: zh_CN\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1412206767.0\n"
+"X-POOTLE-MTIME: 1418704104.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 #: public/js/lib/cancel.js:18
@@ -390,25 +390,23 @@ msgstr ""
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68
 #: public/js/views/force-auth.js:90 public/js/views/reset-start.js:70
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "正在连接至 Persona"
+msgstr "正在连接至 Firefox 账户"
 
 #: templates/reset-start.html:8
-#, fuzzy
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Firefox "
 "Accounts to reset your PIN."
-msgstr "您确定要重置 PIN 码吗？必须登录 Persona 才能重置您的 PIN 码。"
+msgstr "您确定要重置您的 PIN 码吗？您必须登录到 Firefox 账户才能重置您的 PIN 码。"
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "正在退出"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr "您已登录为："
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr "不是您？"
