--- a/locale/sk/LC_MESSAGES/messages.po
+++ b/locale/sk/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Webpay\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-28 17:19+0000\n"
-"PO-Revision-Date: 2014-10-06 20:25+0000\n"
+"PO-Revision-Date: 2014-12-19 08:02+0000\n"
 "Last-Translator: Branislav <rozbora@mozilla.sk>\n"
 "Language-Team: Mozilla.sk <l10n@mozilla.sk>\n"
 "Language: sk\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1412627108.0\n"
+"X-POOTLE-MTIME: 1418976149.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 #: public/js/lib/cancel.js:18
@@ -397,27 +397,25 @@ msgstr ""
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68
 #: public/js/views/force-auth.js:90 public/js/views/reset-start.js:70
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "Pripája sa k Persona"
+msgstr "Pripájanie k Firefox účtu"
 
 #: templates/reset-start.html:8
-#, fuzzy
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Firefox "
 "Accounts to reset your PIN."
 msgstr ""
-"Naozaj chcete vynulovať váš PIN? Ak to chcete urobiť, musíte sa prihlásiť k "
-"účtu Persona."
+"Naozaj chcete vynulovať váš PIN? Ak to chcete urobiť, musíte sa prihlásiť "
+"pomocou Firefox účtu."
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "Odhlasovanie"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr "Ste prihlásený ako:"
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr "Toto nie ste vy?"
