--- a/locale/pt_PT/LC_MESSAGES/messages.po
+++ b/locale/pt_PT/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: WebPay\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-28 17:19+0000\n"
-"PO-Revision-Date: 2014-09-28 17:20+0000\n"
+"PO-Revision-Date: 2014-12-20 03:11+0000\n"
 "Last-Translator: Cláudio <cesperanc@gmail.com>\n"
 "Language-Team: Cláudio Esperança <cesperanc+mozilla@gmail.com>\n"
 "Language: pt\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1411924838.0\n"
+"X-POOTLE-MTIME: 1419045105.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 #: public/js/lib/cancel.js:18
@@ -398,30 +398,30 @@ msgid ""
 "By proceeding you agree to our <a %(terms)s>terms</a> and <a "
 "%(privacy)s>Privacy Policy</a>"
 msgstr ""
+"Ao continuar concorda com os nossos <a %(terms)s>termos</a> e <a %"
+"(privacy)s>Política de Privacidade</a>"
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68
 #: public/js/views/force-auth.js:90 public/js/views/reset-start.js:70
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "A ligar ao Persona"
+msgstr "A ligar às Contas do Firefox"
 
 #: templates/reset-start.html:8
-#, fuzzy
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Firefox "
 "Accounts to reset your PIN."
 msgstr ""
-"Tem a certeza que pretende repor o seu PIN? Tem de iniciar sessão no Persona "
-"para repor o seu PIN."
+"Tem a certeza que pretende repor o seu PIN? Tem de iniciar sessão nas Contas "
+"do Firefox para repor o seu PIN."
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "A terminar sessão"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr "Tem sessão iniciada como:"
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr "Não é você?"
