--- a/locale/de/LC_MESSAGES/messages.po
+++ b/locale/de/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: AMO Webpay\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-28 17:19+0000\n"
-"PO-Revision-Date: 2014-12-06 15:11+0000\n"
+"PO-Revision-Date: 2014-12-28 19:57+0000\n"
 "Last-Translator: Michael <michael.koehler1@gmx.de>\n"
 "Language-Team: German (de) <coce@nufuerspam.de>\n"
 "Language: de\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1417878719.0\n"
+"X-POOTLE-MTIME: 1419796676.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 #: public/js/lib/cancel.js:18
@@ -295,8 +295,8 @@ msgstr "Beim Versuch, Ihre PIN zu erstellen, wurde die Erlaubnis verweigert."
 #: public/js/error-codes.js:21
 msgid "The request timed out whilst attempting to create your PIN."
 msgstr ""
-"Beim Versuch, Ihre PIN zu erstellen, wurde die Zeitüberschreitung für die "
-"Anfrage überschritten."
+"Beim Versuch, Ihre PIN zu erstellen, wurde das Zeitlimit für die Anfrage "
+"überschritten."
 
 #: public/js/error-codes.js:22
 msgid "An unexpected error occurred whilst checking your PIN."
@@ -313,8 +313,8 @@ msgstr "Beim Versuch, Ihre PIN zu überprüfen, wurde die Erlaubnis verweigert."
 #: public/js/error-codes.js:25
 msgid "The request timed out whilst trying to check your PIN"
 msgstr ""
-"Beim Versuch, Ihre PIN zu überprüfen, wurde die Zeitüberschreitung für die "
-"Anfrage überschritten"
+"Beim Versuch, Ihre PIN zu überprüfen, wurde das Zeitlimit für die Anfrage "
+"überschritten."
 
 #: public/js/error-codes.js:26
 msgid "An unexpected error occurred when resetting your PIN."
