--- a/locale/hsb/LC_MESSAGES/messages.po
+++ b/locale/hsb/LC_MESSAGES/messages.po
@@ -3,20 +3,23 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-28 17:19+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2014-12-28 20:25+0000\n"
+"Last-Translator: milupo <milupo@sorbzilla.de>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: hsb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.9.0\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || "
+"n%100==4 ? 2 : 3);\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1419798345.0\n"
 
 #: public/js/lib/cancel.js:33
 #: public/js/lib/cancel.js:16
 #: public/js/lib/cancel.js:18
 msgid "Payment cancelled."
-msgstr ""
+msgstr "Płaćenje přetorhnjene."
 
 #: public/js/views/create-pin.js:105
 #: templates/error.html:20
@@ -29,7 +32,7 @@ msgstr ""
 #: public/js/views/create-pin.js:155
 #: public/js/views/error.js:54
 msgid "Cancel"
-msgstr ""
+msgstr "Přetorhnyć"
 
 #: public/js/lib/pin-widget.js:58
 #: public/js/lib/pin-widget.js:64
@@ -37,21 +40,21 @@ msgstr ""
 #: public/js/lib/pin-widget.js:65
 #: public/js/lib/pin-widget.js:83
 msgid "PIN can only contain digits."
-msgstr ""
+msgstr "PIN smě jenož z cyfrow wobstać."
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
-msgstr ""
+msgstr "Sće jako druhi wužiwar přizjewjeny, dyrbiće płaćenje znowa započeć."
 
 #: public/js/views/throbber.js:15
 #: public/js/views/throbber.js:16
 #: templates/throbber.html:7
 msgid "Loading"
-msgstr ""
+msgstr "Začituje so"
 
 #: webpay/base/templates/base.html:32
 msgid "Beginning payment"
-msgstr ""
+msgstr "Płaćenje so započina"
 
 #: public/js/views/login.js:19
 #: public/js/views/force-auth.js:81
@@ -62,17 +65,17 @@ msgstr ""
 #: public/js/views/force-auth.js:92
 #: public/js/views/reset-start.js:72
 msgid "Connecting to Persona"
-msgstr ""
+msgstr "Zwjazuje so z Persona"
 
 #: webpay/base/templates/base.html:34
 msgid "Payment complete"
-msgstr ""
+msgstr "Płaćenje dokónčene"
 
 #: public/js/lib/auth.js:22
 #: public/js/lib/auth.js:20
 #: public/js/views/page.js:41
 msgid "Oops"
-msgstr ""
+msgstr "Hopla"
 
 #: public/js/lib/auth.js:65
 #: public/js/lib/auth.js:84
@@ -80,11 +83,11 @@ msgstr ""
 #: public/js/lib/auth.js:86
 #: public/js/lib/auth.js:157
 msgid "This is taking longer than expected. Try again?"
-msgstr ""
+msgstr "To traje dlěje hač wočakowane. Hišće raz spytać?"
 
 #: public/js/lib/auth.js:19
 msgid "Something went wrong. Try again?"
-msgstr ""
+msgstr "Něšto je so nimokuliło. Hišće raz spytać?"
 
 #: templates/error.html:27
 #: public/js/views/error.js:52
@@ -94,14 +97,14 @@ msgstr ""
 #: public/js/views/error.js:55
 #: public/js/views/error.js:90
 msgid "OK"
-msgstr ""
+msgstr "W porjadku"
 
 #: public/js/views/error.js:44
 #: public/js/views/locked.js:23
 #: public/js/views/error.js:54
 #: public/js/views/error.js:57
 msgid "Error"
-msgstr ""
+msgstr "Zmylk"
 
 #: public/js/views/enter-pin.js:96
 #: public/js/views/enter-pin.js:100
@@ -111,7 +114,7 @@ msgstr ""
 #: public/js/views/enter-pin.js:113
 #: public/js/views/enter-pin.js:117
 msgid "Enter PIN"
-msgstr ""
+msgstr "PIN zapodać"
 
 #: public/js/views/login.js:25
 #: templates/login.html:5
@@ -123,7 +126,7 @@ msgstr ""
 #: public/js/views/fxa-login.js:28
 #: public/js/views/fxa-login.js:29
 msgid "Sign In"
-msgstr ""
+msgstr "Přizjewić"
 
 #: templates/login.html:6
 #: public/js/views/fxa-login.js:28
@@ -131,12 +134,12 @@ msgstr ""
 #: public/js/views/fxa-login.js:29
 #: public/js/views/fxa-login.js:30
 msgid "Sign in to continue with the payment"
-msgstr ""
+msgstr "Přizjewće so, zo byšće z płaćenjom pokročował"
 
 #: templates/login.html:7
 #: templates/login.html:9
 msgid "Sign in"
-msgstr ""
+msgstr "Přizjewić"
 
 #: public/js/views/create-pin.js:106
 #: public/js/views/create-pin.js:113
@@ -154,25 +157,25 @@ msgstr ""
 #: public/js/views/reset-pin.js:68
 #: templates/signout.html:14
 msgid "Continue"
-msgstr ""
+msgstr "Dale"
 
 #: public/js/views/enter-pin.js:73
 #: public/js/views/enter-pin.js:74
 #: public/js/views/enter-pin.js:78
 #: public/js/views/enter-pin.js:90
 msgid "Wrong PIN"
-msgstr ""
+msgstr "Wopačny PIN"
 
 #: public/js/views/create-pin.js:48
 #: public/js/views/create-pin.js:84
 #: public/js/views/create-pin.js:97
 msgid "PINs do not match."
-msgstr ""
+msgstr "PIN jenakej njejstej."
 
 #: webpay/pin/views.py:46
 #: webpay/testing/views.py:25
 msgid "Create a PIN"
-msgstr ""
+msgstr "PIN wutworić"
 
 #: webpay/pin/views.py:68
 #: webpay/pin/views.py:185
@@ -180,7 +183,7 @@ msgstr ""
 #: public/js/views/create-pin.js:71
 #: public/js/views/create-pin.js:82
 msgid "Confirm PIN"
-msgstr ""
+msgstr "PIN wobkrućić"
 
 #: webpay/pin/views.py:131
 #: webpay/pin/views.py:157
@@ -195,7 +198,7 @@ msgstr ""
 #: public/js/views/force-auth.js:101
 #: public/js/views/reset-pin.js:72
 msgid "Reset PIN"
-msgstr ""
+msgstr "PIN wróćo stajić"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
@@ -204,7 +207,7 @@ msgstr ""
 #: templates/pin-form.html:29
 #: templates/pin-form.html:30
 msgid "Forgot your PIN?"
-msgstr ""
+msgstr "Sće waš PIN zabył?"
 
 #: public/js/views/locked.js:24
 #: public/js/views/locked.js:22
@@ -212,16 +215,21 @@ msgid ""
 "You entered the wrong PIN too many times. Your account is locked. Please "
 "try your purchase again in 5 minutes."
 msgstr ""
+"Sće přehusto wopačny PIN zapodał. Waše konto je so zawrěł. Prošu spytajće "
+"swoju kup za 5 mjeńšin hišće raz."
 
 #: templates/was-locked.html:6
 msgid "Your PIN was locked"
-msgstr ""
+msgstr "Waš PIN je so zawrěł"
 
 #: templates/was-locked.html:7
 msgid ""
 "Your PIN was locked because you entered it incorrectly too many times. You "
 "can continue and try entering your PIN again or reset your PIN."
 msgstr ""
+"Waš PIN je so zawrěł, dokelž sće jón přehusto wopak zapodał. Móžeće "
+"pokročować a pospytować, swój PIN hišće raz zapodać abo swój PIN wróćo "
+"stajić."
 
 #: templates/reset-start.html:7
 #: templates/reset-start.html:10
@@ -229,11 +237,13 @@ msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Persona to "
 "reset your PIN."
 msgstr ""
+"Chceće swój PIN woprawdźe wróćo stajić? Dyrbiće so z Persona přizjewić, zo "
+"byšće swój PIN wróćo stajił."
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
 msgid "Verifying payment"
-msgstr ""
+msgstr "Płaćenje so přepruwuje"
 
 #: public/js/lib/auth.js:29
 #: public/js/lib/auth.js:30
@@ -242,11 +252,11 @@ msgstr ""
 #: public/js/lib/auth.js:26
 #: public/js/lib/auth.js:41
 msgid "Retrying"
-msgstr ""
+msgstr "Nowy pospyt běži"
 
 #: public/js/lib/auth.js:64
 msgid "That took longer than expected. Retry?"
-msgstr ""
+msgstr "To je dlěje trało hač wočakowane. Hišće raz spytać?"
 
 #: public/js/views/create-pin.js:37
 #: templates/reset-start.html:11
@@ -254,7 +264,7 @@ msgstr ""
 #: templates/reset-start.html:15
 #: public/js/views/create-pin.js:83
 msgid "Back"
-msgstr ""
+msgstr "Wróćo"
 
 #: public/js/views/create-pin.js:38
 #: public/js/views/enter-pin.js:95
@@ -264,7 +274,7 @@ msgstr ""
 #: public/js/views/create-pin.js:84
 #: public/js/views/enter-pin.js:112
 msgid "Submit"
-msgstr ""
+msgstr "Wotpósłać"
 
 #: public/js/views/create-pin.js:66
 #: public/js/views/enter-pin.js:60
@@ -292,7 +302,7 @@ msgstr ""
 #: public/js/views/reset-pin.js:33
 #: public/js/views/reset-start.js:124
 msgid "Retry?"
-msgstr ""
+msgstr "Hišće raz spytać?"
 
 #: public/js/views/create-pin.js:114
 #: public/js/views/create-pin.js:116
@@ -303,11 +313,11 @@ msgstr ""
 #: public/js/views/create-pin.js:164
 #: public/js/views/create-pin.js:167
 msgid "Create PIN"
-msgstr ""
+msgstr "PIN wutworić"
 
 #: public/js/views/error.js:45
 msgid "Something went wrong."
-msgstr ""
+msgstr "Něšto je so nimokuliło."
 
 #: public/js/views/reset-start.js:29
 #: public/js/views/reset-start.js:118
@@ -316,184 +326,192 @@ msgstr ""
 #: public/js/views/reset-start.js:133
 #: public/js/views/reset-start.js:135
 msgid "Reset your PIN?"
-msgstr ""
+msgstr "Waš PIN wróćo stajić?"
 
 #: public/js/views/was-locked.js:13
 #: public/js/views/was-locked.js:38
 #: public/js/views/was-locked.js:42
 msgid "Was Locked"
-msgstr ""
+msgstr "Je so zawrěł"
 
 #: public/js/views/wait-for-tx.js:10
 #: public/js/views/wait-to-start.js:13
 msgid "Setting up payment"
-msgstr ""
+msgstr "Zapłaćenje so zarjaduje"
 
 #: public/js/error-codes.js:12
 msgid "An internal web request timed out."
-msgstr ""
+msgstr "Nutřkowne webnaprašowanje je čas překročiło."
 
 #: public/js/error-codes.js:13
 msgid "The system timed out while trying to log in."
-msgstr ""
+msgstr "Při přizjewjenskim pospyće je system čas překročił."
 
 #: public/js/error-codes.js:14
 msgid "An error occurred whilst trying to log out."
-msgstr ""
+msgstr "Při wotzjewjenskim pospyće je zmylk wustupił."
 
 #: public/js/error-codes.js:15
 msgid "The system timed out while trying to log out."
-msgstr ""
+msgstr "Při wotzjewjenskim pospyće je system čas překročił."
 
 #: public/js/error-codes.js:16
 msgid "Payments are temporarily disabled."
-msgstr ""
+msgstr "Zapłaćenja su nachwilu znjemóžnjene."
 
 #: public/js/error-codes.js:17
 msgid "An unexpected error occurred when creating your PIN."
-msgstr ""
+msgstr "Při tworjenju wašeho PIN je njewočakowany zmylk wustupił."
 
 #: public/js/error-codes.js:18
 #: public/js/error-codes.js:27
 msgid "The PIN data submitted was invalid."
-msgstr ""
+msgstr "Sposrědkowane PIN-daty su njepłaćiwe."
 
 #: public/js/error-codes.js:19
 msgid "No valid user found whilst attempting to create your PIN"
-msgstr ""
+msgstr "Při tworjenju wašeho PINa njeje so žadyn płaćiwy wužiwar namakał"
 
 #: public/js/error-codes.js:20
 msgid "Permission denied attempting to create your PIN."
-msgstr ""
+msgstr "Při pospyće waš PIN wutworić, je so dowolnosć zapowědźiła."
 
 #: public/js/error-codes.js:21
 msgid "The request timed out whilst attempting to create your PIN."
-msgstr ""
+msgstr "Při pospyće waš PIN wutworić, je so čas za naprašowanje překročił."
 
 #: public/js/error-codes.js:22
 msgid "An unexpected error occurred whilst checking your PIN."
-msgstr ""
+msgstr "Při přepruwowanju wašeho PIN je njewočakowany zmylk wustupił."
 
 #: public/js/error-codes.js:23
 msgid "No valid user found whilst checking your PIN"
-msgstr ""
+msgstr "Při přepruwowanju wašeho PIN njeje so žadyn płaćiwy wužiwar namakał"
 
 #: public/js/error-codes.js:24
 msgid "Permission denied attempting to check your PIN"
-msgstr ""
+msgstr "Při pospyće waš PIN přepruwować, je so dowolnosć zapowědźił"
 
 #: public/js/error-codes.js:25
 msgid "The request timed out whilst trying to check your PIN"
-msgstr ""
+msgstr "Při pospyće waš PIN přepruwować, je so čas za naprašowanje překročił"
 
 #: public/js/error-codes.js:26
 msgid "An unexpected error occurred when resetting your PIN."
-msgstr ""
+msgstr "Při wróćostajenju wašeho PIN je njewočakowany zmylk wustupił."
 
 #: public/js/error-codes.js:28
 msgid "No valid user found whilst attempting to reset your PIN"
 msgstr ""
+"Při pospyće waš PIN wróćo stajeć, njeje so žadyn płaćiwy wužiwar namakał"
 
 #: public/js/error-codes.js:29
 msgid "Permission denied attempting to reset your PIN."
-msgstr ""
+msgstr "Při pospyće waš PIN wróćo stajeć, je so dowolnosć zapowědźiła."
 
 #: public/js/error-codes.js:30
 msgid "The request timed out whilst attempting to reset your PIN."
-msgstr ""
+msgstr "Při pospyće waš PIN wróćo stajić, je so čas za naprašowanje překročił."
 
 #: public/js/error-codes.js:31
 msgid "The transaction failed. You have not been charged for this purchase."
 msgstr ""
+"Transakcija je so nimokuliła. Waše konto njeje so za tutu kup wobćežiło."
 
 #: public/js/error-codes.js:32
 msgid ""
 "The payment method or price point is not supported for this region or "
 "operator."
 msgstr ""
+"Płaćenska metoda abo płaćiznowy dypk so za tutón region abo wobhospodarja "
+"njepodpěruje."
 
 #: public/js/lib/auth.js:214
 msgid "Waiting for login"
-msgstr ""
+msgstr "Čaka so na přizjewjenje…"
 
 #: public/js/lib/wait.js:56
 msgid "Retrieving Transaction"
-msgstr ""
+msgstr "Transakcija so wotwołuje…"
 
 #: public/js/views/error.js:55
 #: public/js/views/error.js:58
 msgid "An unexpected error occurred."
-msgstr ""
+msgstr "Njewočakowany zmylk je wustupił."
 
 #: public/js/views/force-auth.js:87
 #: public/js/views/force-auth.js:100
 #: public/js/views/force-auth.js:99
 msgid "Sign-in to reset PIN"
-msgstr ""
+msgstr "Přizjewće so, zo byšće PIN wróćo stajił"
 
 #: public/js/views/force-auth.js:90
 #: public/js/views/force-auth.js:103
 #: public/js/views/force-auth.js:102
 msgid "Please sign in to reset your PIN."
-msgstr ""
+msgstr "Prošu přizjewće so, zo byšće swój PIN wróćo stajił."
 
 #: public/js/views/init.js:12
 msgid "Initializing"
-msgstr ""
+msgstr "Inicializěruje so…"
 
 #: public/js/views/locked.js:21
 msgid "PIN Locked"
-msgstr ""
+msgstr "PIN je zawrjeny"
 
 #: public/js/views/payment-success.js:15
 #: public/js/views/wait-to-finish.js:14
 msgid "Completing payment"
-msgstr ""
+msgstr "Płaćenje so wotzamkuje"
 
 #: public/js/views/simulate.js:23
 msgid "Processing"
-msgstr ""
+msgstr "Předźěłuje so…"
 
 #: public/js/views/simulate.js:51
 msgid "Simulate Payment"
-msgstr ""
+msgstr "Simulowane płaćenje"
 
 #: public/js/views/simulate.js:55
 msgid "You will not be charged."
-msgstr ""
+msgstr "Waše konto so njewobćeži."
 
 #: templates/reset-start.html:12
 #: templates/reset-start.html:16
 msgid "Reset"
-msgstr ""
+msgstr "Wróćo stajić"
 
 #: templates/pin-form.html:22
 msgid ""
 "By proceeding you agree to our <a %(terms)s>terms</a> and <a "
 "%(privacy)s>Privacy Policy</a>"
 msgstr ""
+"Překročujo zwoliće do našich <a %(terms)s>wuměnjenjow</a> a <a %"
+"(privacy)s>prawidłow priwatnosće</a>"
 
 #: public/js/views/force-auth.js:91
 #: public/js/views/reset-start.js:68
 #: public/js/views/force-auth.js:90
 #: public/js/views/reset-start.js:70
 msgid "Connecting to Firefox Accounts"
-msgstr ""
+msgstr "Zwjazuje so z Firefox Accounts"
 
 #: templates/reset-start.html:8
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Firefox "
 "Accounts to reset your PIN."
 msgstr ""
+"Chceće swój PIN woprawdźe wróćo stajeć? Dyrbiće so pola Firefox Accounts "
+"přizjewić, zo byšće swój PIN wróćo stajił."
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "Wotzjewja so…"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr "Sće přizjewjeny jako:"
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr "Njejsće to wy?"
