--- a/locale/da/LC_MESSAGES/messages.po
+++ b/locale/da/LC_MESSAGES/messages.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: Webpay\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-28 17:19+0000\n"
-"PO-Revision-Date: 2014-09-30 21:14+0000\n"
-"Last-Translator: Jørgen   <joergenr@stofanet.dk>\n"
+"PO-Revision-Date: 2015-01-16 22:10+0100\n"
+"Last-Translator: Jørgen Rasmussen <joergenr@stofanet.dk>\n"
 "Language-Team: MozillaDanmark\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.5.0\n"
+"X-Generator: Poedit 1.7.3\n"
 "X-POOTLE-MTIME: 1412111657.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
@@ -399,27 +399,25 @@ msgstr ""
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68
 #: public/js/views/force-auth.js:90 public/js/views/reset-start.js:70
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "Forbinder til Persona"
+msgstr "Forbinder til Firefox-konti"
 
 #: templates/reset-start.html:8
-#, fuzzy
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Firefox "
 "Accounts to reset your PIN."
 msgstr ""
 "Er du sikker på, at du vil nulstille din pinkode? Du skal logge ind med "
-"Persona for at nulstille din pinkode."
+"Firefox-konti for at nulstille din pinkode."
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "Logger ud"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr "Du er logget ind som:"
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr "Ikke dig?"
