--- a/locale/pa/LC_MESSAGES/messages.po
+++ b/locale/pa/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-28 17:19+0000\n"
-"PO-Revision-Date: 2014-10-12 14:34+0000\n"
+"PO-Revision-Date: 2015-01-22 15:50+0000\n"
 "Last-Translator: Aman <amanpreet.alam@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: pa\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1) ;\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1413124449.0\n"
+"X-POOTLE-MTIME: 1421941834.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 #: public/js/lib/cancel.js:18
@@ -395,27 +395,25 @@ msgstr ""
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68
 #: public/js/views/force-auth.js:90 public/js/views/reset-start.js:70
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "Persona ਨੂੰ ਕੁਨੈਕਟ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ"
+msgstr "ਫਾਇਰਫਾਕਸ ਖਾਤਿਆਂ ਨਾਲ ਕੁਨੈਕਟ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ"
 
 #: templates/reset-start.html:8
-#, fuzzy
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Firefox "
 "Accounts to reset your PIN."
 msgstr ""
-"ਤੁਹਾਨੂੰ ਯਕੀਨ ਹੈ ਕਿ ਤੁਸੀ ਪਿੰਨ ਰਿਸੈੱਟ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ? ਤੁਹਾਨੂੰ ਆਪਣੇ ਪਿੰਨ ਰੀਸੈੱਟ ਕਰਨ ਲਈ Persona ਨੂੰ "
-"ਵਿੱਚ ਲਾਗਿਨ ਕਰਨਾ ਲਾਜ਼ਮੀ ਹੈ।"
+"ਤੁਹਾਨੂੰ ਯਕੀਨ ਹੈ ਕਿ ਤੁਸੀ ਪਿੰਨ ਰਿਸੈੱਟ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ? ਤੁਹਾਨੂੰ ਆਪਣੇ ਪਿੰਨ "
+"ਰੀਸੈੱਟ ਕਰਨ ਲਈ ਫਾਇਰਫਾਕਸ ਖਾਤਿਆਂ ਨੂੰ ਵਿੱਚ ਲਾਗਿਨ ਕਰਨਾ ਲਾਜ਼ਮੀ ਹੈ।"
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "ਲਾਗ ਆਉਟ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr "ਤੁਸੀਂ ਇਸ ਵਜੋਂ ਸਾਇਨ ਇਨ ਹੋ:"
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr "ਤੁਸੀਂ ਨਹੀਂ ਹੋ?"
